fixed menu overlap issue

--- a/commonStyles.css
+++ b/commonStyles.css
@@ -10,6 +10,7 @@ body {
   position: fixed;
   left: 25px;
   bottom: 25px;
+  z-index: 2;
 }
 #menuIcon div {
   width: 25px;
@@ -39,6 +40,7 @@ body {
   height: 100%;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  z-index: 1;
 }
 #tabs {
   position: absolute;
